# txtfile

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wixok/: txtfile.py
tests/: test_txtfile.py
