[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wixok.txtfile"
version = "25.8.3"
description = "Simple Python package for text file operations."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }

authors = [{ name = "Wixok", email = "contact@wixok.com" }]
maintainers = [{ name = "Mohammed Dellihr", email = "mohammeddellihr@maildoo.com" }]
keywords = ["text", "file", "io", "toolkit", "txtfile"]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Repository = "https://github.com/wixok/txtfile"
Issues = "https://github.com/wixok/txtfile/issues"

[project.scripts]
txtfile = "txtfile.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["wixok*"]
exclude = ["tests*"]